- Fixed bug #47037 (No error when using fopen with emty string) Patch by Cristian Rodriguez R.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@273100 c90b9560-bf6c-de11-be94-00142212c4b1